test/should-fail/vsgc1093.f3
/*
 * @test/compile-error
 */

var y = [77];
var idx = 0;
var x = bind y[idx] with inverse;
